2/25/13 delete "dependencies" entry in package.json, SB says we only need "devDependencies" (the default)
2/25/13 document package.json in README.md, because JSON doesn't support comments
2/16/13 changelog change to test git-aware bash prompt
2/16/13 fix example-sim-debug.html, check in example-sim-release.html (for grunt testing)
2/16/13 reformat grunt.js with 2-space indents
2/16/13 check in almond-0.2.5.js, shim loader for use with grunt
2/16/13 rewrite PerformanceMonitor using inheritance
2/16/13 add config.js path and shim for fastclick.js, remove from .html
2/16/13 rename fastclick.js to fastclick-0.5.6.js, following phet's convention for contrib libs
2/15/13 Added fastclick.js so that buttons will respond immediately on iPad instead of after 300ms
2/13/13 change animation method from tick to step, so as not to be confused with Easel.Ticker.tick
2/13/13 fixed the <script> tag for stats.js, it should not have a data-main attribute
2/13/13 fixed "Show Performance Meter" check box, bad attribute controlPanel.html
2/13/13 renamed "performance meter" to "performance monitor" (how stats.js describes it) throughout
2/13/13 created ExampleSimView as a container for all view-related stuff (scene graph, dom, browser window,...)
2/13/13 encapsulated stats.js meter in PerformanceMeter.js
2/13/13 switch to non-minified stats-r11.js
2/13/13 Made the millisecond counter for the FPS indicator work.  Broke out the animation loop to make this happen.
2/12/13 add missing README files, doc
2/12/13 fix control panel i18n by passing strings to ControlPanel.init
2/12/13 add French strings for control panel
2/12/13 i18n using tpl
2/12/13 "Flip Magnet" -> "Flip Polarity"
2/12/13 "Show Frames per Second" -> "Show Frame Rate"
2/12/13 use <label for> for check box label so that clicking on it has same effect as check box button